# aas-tts

./: README.md  pyproject.toml
examples/: README.md  claude_desktop_config.json  mcp_client_config.json  streaming_demo.html
src/aas_tts/: __init__.py
src/aas_tts/api/: __init__.py  server.py
src/aas_tts/cli/: __init__.py  main.py
src/aas_tts/core/: __init__.py  config.py  models.py
src/aas_tts/mcp/: __init__.py  fastmcp_server.py  server.py
src/aas_tts/orchestration/: __init__.py  circus_backend.py  docker_backend.py  process_manager.py  simple_backend.py
src/aas_tts/services/: __init__.py  audio_playback_service.py  streaming_service.py  tts_service.py
